@@ -1,3 +1,7 @@
+2009-05-06 Frank Naegler  <typo3@naegler.net>
+
+	* replace t3lib_div::linkThisScript() with typoLink_URL(array('parameter' => $GLOBALS['TSFE']->id)) in case of a realurl or t3lib_div bug
+	
 2009-03-24 Frank Naegler  <typo3@naegler.net>
 
 	* added TS-Option aliasField
